--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,4 +1,11 @@
-streamlit
-plotly
-pandas
-numpy
+Name = "streamlit"
+Version = "1.50.0"
+
+Name = "plotly"
+Version: = "6.3.0"
+
+Name = "pandas"
+Version = "2.2.2"
+
+Name =  "numpy"
+Version = "1.26.4"
